@@ -3,85 +3,105 @@ package com.example.todo.controller;
 import com.example.todo.dto.ResponseDTO;
 import com.example.todo.dto.TodoDTO;
 import com.example.todo.model.TodoEntity;
-import com.example.todo.security.UserDetailsImpl;
 import com.example.todo.service.TodoService;
-import java.util.List;
-import java.util.Optional;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Slf4j
+@CrossOrigin(originPatterns ="*")
 @RestController
-@RequiredArgsConstructor
-@RequestMapping("/todo")
+@RequestMapping("todo")
 public class TodoController {
-
-    private final TodoService service;
+    @Autowired
+    private TodoService service;
 
     @PostMapping
-    public ResponseEntity<?> createTodo(@AuthenticationPrincipal UserDetailsImpl userDetails, @RequestBody TodoDTO dto){
-        try{
+    public ResponseEntity<?> createTodo(@AuthenticationPrincipal String userId, @RequestBody TodoDTO dto) {
+        try {
             TodoEntity entity = TodoDTO.toEntity(dto);
             entity.setId(null);
-            entity.setUserId(userDetails.getUser().getId());
+            entity.setUserId(userId);
 
-            Optional<TodoEntity> entities = service.create(entity);
-            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
+            List<TodoEntity> entities = service.create(entity);
+
+            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
+            log.info("Log:entities => dtos OK!");
+
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
+            log.info("Log:responsedto OK!");
 
             return ResponseEntity.ok().body(response);
-        } catch (Exception e){
+        } catch (Exception e) {
             String error = e.getMessage();
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().error(error).build();
             return ResponseEntity.badRequest().body(response);
         }
     }
-
     @GetMapping
-    public ResponseEntity<?> retrieveTodo(@AuthenticationPrincipal UserDetailsImpl userDetails){
-        List<TodoEntity> entities = service.retrieve(userDetails.getUser().getId());
-        List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
+    public ResponseEntity<?> retrieveTodo(@AuthenticationPrincipal String userId) {
+        List<TodoEntity> entities = service.retrieve(userId);
+        List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
         ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
         return ResponseEntity.ok().body(response);
     }
-
     @PutMapping
-    public ResponseEntity<?> updateTodo(@AuthenticationPrincipal UserDetailsImpl userDetails, @RequestBody TodoDTO dto){
-        try{
+    public ResponseEntity<?> updateTodo(@AuthenticationPrincipal String userId, @RequestBody TodoDTO dto) {
+        try {
             TodoEntity entity = TodoDTO.toEntity(dto);
-            entity.setUserId(userDetails.getUser().getId());
-            Optional<TodoEntity> entities = service.updateTodo(entity);
-            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
+            entity.setUserId(userId);
+
+            List<TodoEntity> entities = service.update(entity);
+            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
             return ResponseEntity.ok().body(response);
-        } catch (Exception e){
+        } catch (Exception e) {
             String error = e.getMessage();
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().error(error).build();
             return ResponseEntity.badRequest().body(response);
         }
     }
-
     @DeleteMapping
-    public ResponseEntity<?> delete(@AuthenticationPrincipal UserDetailsImpl userDetails, @RequestBody TodoDTO dto){
-        try{
+    public ResponseEntity<?> deleteTodo(@AuthenticationPrincipal String userId, @RequestBody TodoDTO dto) {
+        try {
             TodoEntity entity = TodoDTO.toEntity(dto);
-            entity.setUserId(userDetails.getUser().getId());
+            entity.setUserId(userId);
+
             List<TodoEntity> entities = service.delete(entity);
-            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).toList();
+            List<TodoDTO> dtos = entities.stream().map(TodoDTO::new).collect(Collectors.toList());
             ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(dtos).build();
             return ResponseEntity.ok().body(response);
-        } catch (Exception e){
+        } catch (Exception e) {
             String error = e.getMessage();
-            ResponseDTO<String> response = ResponseDTO.<String>builder().error(error).build();
+            ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().error(error).build();
+            return ResponseEntity.badRequest().body(response);
+        }
+    }
+    @DeleteMapping("/batch")
+    public ResponseEntity<?> deleteTodos(@AuthenticationPrincipal String userId, @RequestBody List<String> todoIds) {
+        try {
+            // 서비스 레이어에서 여러 항목을 삭제하는 메서드를 호출하고 삭제된 항목들을 받아옵니다.
+            List<TodoEntity> deletedEntities = service.deleteBatch(userId, todoIds);
+
+            // 삭제된 항목들을 DTO로 변환합니다.
+            List<TodoDTO> deletedDtos = deletedEntities.stream()
+                    .map(TodoDTO::new)
+                    .collect(Collectors.toList());
+
+            // 응답 DTO를 생성합니다.
+            ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().data(deletedDtos).build();
+
+            // 정상적인 응답을 반환합니다.
+            return ResponseEntity.ok().body(response);
+        } catch (Exception e) {
+            // 예외가 발생한 경우, 예외 메시지를 응답에 담아서 반환합니다.
+            String error = e.getMessage();
+            ResponseDTO<TodoDTO> response = ResponseDTO.<TodoDTO>builder().error(error).build();
             return ResponseEntity.badRequest().body(response);
         }
     }
